clean: use preferred method